src/integration.h

typedef struct libia_params libia_params;
typedef struct libia_runtime libia_runtime;
typedef struct libia_sst libia_sst;
typedef struct libia_image libia_image;
typedef enum libia_option_kind {
    LIBIA_OPTION_KIND_VOID = 0,
    LIBIA_OPTION_KIND_BOOL = 1,
    LIBIA_OPTION_KIND_INT = 2,
    LIBIA_OPTION_KIND_STRING = 3,
    LIBIA_OPTION_KIND_STRING_PAIR = 4,
} libia_option_kind;
typedef struct libia_option_info {
    const char *name;
    const char *value_hint;
    const char *value_hint_2;
    const char *help;
    const char *env;
    libia_option_kind kind;
    bool is_sampling;
    bool is_spec;
    bool is_preset_only;
    bool is_negated;
} libia_option_info;
typedef struct libia_chat_message {
    const char *role;
    const char *content;
    const char *reasoning_content;
} libia_chat_message;
typedef enum libia_generation_kind {
    LIBIA_GENERATION_KIND_CONTENT = 0,
    LIBIA_GENERATION_KIND_REASONING = 1,
    LIBIA_GENERATION_KIND_TOOL_CALL = 2,
} libia_generation_kind;
typedef void (*libia_stream_callback)(libia_generation_kind kind, const char *text, int32_t mode, int32_t tps, void *user_data);
typedef enum libia_sst_generation_kind {
    LIBIA_SST_GENERATION_KIND_TEXT = 0,
    LIBIA_SST_GENERATION_KIND_SPEECH_START = 1,
    LIBIA_SST_GENERATION_KIND_SPEECH_END = 2,
} libia_sst_generation_kind;
typedef void (*libia_sst_stream_callback)(libia_sst_generation_kind kind, const char *text, void *user_data);
LIBIA_API char *libia_string_dup(const char *text);
LIBIA_API void  libia_string_free(char *text);
LIBIA_API libia_params *libia_params_create(void);
LIBIA_API libia_params *libia_params_clone(const libia_params *params);
LIBIA_API void          libia_params_free(libia_params *params);
LIBIA_API void          libia_params_reset(libia_params *params);
LIBIA_API int  libia_params_option_count(void);
LIBIA_API bool libia_params_option_info(int index, libia_option_info *out_info);
LIBIA_API bool libia_params_apply_argv(libia_params *params, int argc, const char *const *argv, char **error_out);
LIBIA_API bool libia_params_set_option(libia_params *params, const char *name, const char *value, char **error_out);
LIBIA_API bool libia_params_set_option_pair(libia_params *params, const char *name, const char *value1, const char *value2, char **error_out);
LIBIA_API const char *libia_params_get_option(const libia_params *params, const char *name);
LIBIA_API bool libia_params_has_option(const libia_params *params, const char *name);
LIBIA_API bool libia_params_set_bool(libia_params *params, const char *name, bool value, char **error_out);
LIBIA_API bool libia_params_get_bool(const libia_params *params, const char *name, bool *out_value);
LIBIA_API bool libia_params_set_int(libia_params *params, const char *name, int64_t value, char **error_out);
LIBIA_API bool libia_params_get_int(const libia_params *params, const char *name, int64_t *out_value);
LIBIA_API bool libia_params_set_float(libia_params *params, const char *name, double value, char **error_out);
LIBIA_API bool libia_params_get_float(const libia_params *params, const char *name, double *out_value);
LIBIA_API bool libia_params_set_string(libia_params *params, const char *name, const char *value, char **error_out);
LIBIA_API bool libia_params_get_string(const libia_params *params, const char *name, const char **out_value);
LIBIA_API bool libia_params_set_tools_json(libia_params *params, const char *tools_json, char **error_out);
typedef enum libia_image_sample_method {
    LIBIA_IMAGE_SAMPLE_EULER = 0,
    LIBIA_IMAGE_SAMPLE_EULER_A = 1,
    LIBIA_IMAGE_SAMPLE_HEUN = 2,
    LIBIA_IMAGE_SAMPLE_DPM2 = 3,
    LIBIA_IMAGE_SAMPLE_DPMPP2S_A = 4,
    LIBIA_IMAGE_SAMPLE_DPMPP2M = 5,
    LIBIA_IMAGE_SAMPLE_LCM = 9,
} libia_image_sample_method;
typedef enum libia_image_scheduler {
    LIBIA_IMAGE_SCHEDULER_DISCRETE = 0,
    LIBIA_IMAGE_SCHEDULER_KARRAS = 1,
    LIBIA_IMAGE_SCHEDULER_EXPONENTIAL = 2,
    LIBIA_IMAGE_SCHEDULER_SIMPLE = 6,
} libia_image_scheduler;
typedef struct libia_image_params {
    const char *model_path;
    const char *diffusion_model_path;
    const char *vae_path;
    const char *clip_l_path;
    const char *clip_g_path;
    const char *t5xxl_path;
    const char *llm_path;
    const char *backend;
    const char *params_backend;
    const char *max_vram;
    int32_t n_threads;
    bool use_mmap;
    bool flash_attn;
    bool diffusion_flash_attn;
} libia_image_params;
typedef struct libia_image_generate_params {
    const char *prompt;
    const char *negative_prompt;
    const char *output_path;
    int32_t width;
    int32_t height;
    int32_t sample_steps;
    int64_t seed;
    int32_t batch_count;
    float cfg_scale;
    float guidance;
    libia_image_sample_method sample_method;
    libia_image_scheduler scheduler;
} libia_image_generate_params;
typedef struct libia_image_result {
    char *path;
    int32_t width;
    int32_t height;
    int32_t channels;
    int64_t seed;
} libia_image_result;