client-rust/lib-rust/src/ffi.rs

use libc::{c_char, c_double, c_float, c_int, c_void};
use std::os::raw::c_longlong;

#[repr(C)]
pub struct libia_params {
    _private: [u8; 0],
}

#[repr(C)]
pub struct libia_runtime {
    _private: [u8; 0],
}

#[repr(C)]
pub struct libia_sst {
    _private: [u8; 0],
}

#[repr(C)]
pub struct libia_image {
    _private: [u8; 0],
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum libia_option_kind {
    LIBIA_OPTION_KIND_VOID = 0,
    LIBIA_OPTION_KIND_BOOL = 1,
    LIBIA_OPTION_KIND_INT = 2,
    LIBIA_OPTION_KIND_STRING = 3,
    LIBIA_OPTION_KIND_STRING_PAIR = 4,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libia_option_info {
    pub name: *const c_char,
    pub value_hint: *const c_char,
    pub value_hint_2: *const c_char,
    pub help: *const c_char,
    pub env: *const c_char,
    pub kind: libia_option_kind,
    pub is_sampling: bool,
    pub is_spec: bool,
    pub is_preset_only: bool,
    pub is_negated: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libia_chat_message {
    pub role: *const c_char,
    pub content: *const c_char,
    pub reasoning_content: *const c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum libia_generation_kind {
    LIBIA_GENERATION_KIND_CONTENT = 0,
    LIBIA_GENERATION_KIND_REASONING = 1,
    LIBIA_GENERATION_KIND_TOOL_CALL = 2,
}

pub type libia_stream_callback = Option<
    unsafe extern "C" fn(
        kind: libia_generation_kind,
        text: *const c_char,
        mode: c_int,
        tps: c_int,
        user_data: *mut c_void,
    ),
>;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum libia_sst_generation_kind {
    LIBIA_SST_GENERATION_KIND_TEXT = 0,
    LIBIA_SST_GENERATION_KIND_SPEECH_START = 1,
    LIBIA_SST_GENERATION_KIND_SPEECH_END = 2,
}

pub type libia_sst_stream_callback = Option<
    unsafe extern "C" fn(
        kind: libia_sst_generation_kind,
        text: *const c_char,
        user_data: *mut c_void,
    ),
>;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum libia_image_sample_method {
    LIBIA_IMAGE_SAMPLE_EULER = 0,
    LIBIA_IMAGE_SAMPLE_EULER_A = 1,
    LIBIA_IMAGE_SAMPLE_HEUN = 2,
    LIBIA_IMAGE_SAMPLE_DPM2 = 3,
    LIBIA_IMAGE_SAMPLE_DPMPP2S_A = 4,
    LIBIA_IMAGE_SAMPLE_DPMPP2M = 5,
    LIBIA_IMAGE_SAMPLE_LCM = 9,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub enum libia_image_scheduler {
    LIBIA_IMAGE_SCHEDULER_DISCRETE = 0,
    LIBIA_IMAGE_SCHEDULER_KARRAS = 1,
    LIBIA_IMAGE_SCHEDULER_EXPONENTIAL = 2,
    LIBIA_IMAGE_SCHEDULER_SIMPLE = 6,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libia_image_params {
    pub model_path: *const c_char,
    pub diffusion_model_path: *const c_char,
    pub vae_path: *const c_char,
    pub clip_l_path: *const c_char,
    pub clip_g_path: *const c_char,
    pub t5xxl_path: *const c_char,
    pub llm_path: *const c_char,
    pub backend: *const c_char,
    pub params_backend: *const c_char,
    pub max_vram: *const c_char,
    pub n_threads: c_int,
    pub use_mmap: bool,
    pub flash_attn: bool,
    pub diffusion_flash_attn: bool,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libia_image_generate_params {
    pub prompt: *const c_char,
    pub negative_prompt: *const c_char,
    pub output_path: *const c_char,
    pub width: c_int,
    pub height: c_int,
    pub sample_steps: c_int,
    pub seed: c_longlong,
    pub batch_count: c_int,
    pub cfg_scale: c_float,
    pub guidance: c_float,
    pub sample_method: libia_image_sample_method,
    pub scheduler: libia_image_scheduler,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libia_image_result {
    pub path: *mut c_char,
    pub width: c_int,
    pub height: c_int,
    pub channels: c_int,
    pub seed: c_longlong,
}

unsafe extern "C" {
    pub fn libia_string_dup(text: *const c_char) -> *mut c_char;
    pub fn libia_string_free(text: *mut c_char);

    pub fn libia_params_create() -> *mut libia_params;
    pub fn libia_params_clone(params: *const libia_params) -> *mut libia_params;
    pub fn libia_params_free(params: *mut libia_params);
    pub fn libia_params_reset(params: *mut libia_params);

    pub fn libia_params_option_count() -> c_int;
    pub fn libia_params_option_info(index: c_int, out_info: *mut libia_option_info) -> bool;

    pub fn libia_params_apply_argv(
        params: *mut libia_params,
        argc: c_int,
        argv: *const *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_set_option(
        params: *mut libia_params,
        name: *const c_char,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_set_option_pair(
        params: *mut libia_params,
        name: *const c_char,
        value1: *const c_char,
        value2: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_option(
        params: *const libia_params,
        name: *const c_char,
    ) -> *const c_char;
    pub fn libia_params_has_option(params: *const libia_params, name: *const c_char) -> bool;

    pub fn libia_params_set_bool(
        params: *mut libia_params,
        name: *const c_char,
        value: bool,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_bool(
        params: *const libia_params,
        name: *const c_char,
        out_value: *mut bool,
    ) -> bool;
    pub fn libia_params_set_int(
        params: *mut libia_params,
        name: *const c_char,
        value: c_longlong,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_int(
        params: *const libia_params,
        name: *const c_char,
        out_value: *mut c_longlong,
    ) -> bool;
    pub fn libia_params_set_float(
        params: *mut libia_params,
        name: *const c_char,
        value: c_double,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_float(
        params: *const libia_params,
        name: *const c_char,
        out_value: *mut c_double,
    ) -> bool;
    pub fn libia_params_set_string(
        params: *mut libia_params,
        name: *const c_char,
        value: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn libia_params_get_string(
        params: *const libia_params,
        name: *const c_char,
        out_value: *mut *const c_char,
    ) -> bool;
    pub fn libia_params_set_tools_json(
        params: *mut libia_params,
        tools_json: *const c_char,
        error_out: *mut *mut c_char,
    ) -> bool;
